like/dislike-comment/product

--- a/Project/Client/Views/Admin/CreateProduct.cshtml
+++ b/Project/Client/Views/Admin/CreateProduct.cshtml
@@ -103,12 +103,12 @@
         <span asp-validation-for="@Model.imageFiles" class="text-danger"></span>
     </div>
 
-    <!-- Username -->
+@*     <!-- Username -->
     <div class="form-group">
         <label class="control-label" asp-for="@Model.Username">Username</label>
         <input type="text" name="username" class="form-control" asp-for="@Model.Username" />
         <span asp-validation-for="@Model.Username" class="text-danger"></span> <!-- Không cần validation cho trường này -->
-    </div>
+    </div> *@
 
     <!-- Game File (Upload game file) -->
     <div class="form-group">
