--- a/Project/Client/Views/Admin/UpdateProduct.cshtml
+++ b/Project/Client/Views/Admin/UpdateProduct.cshtml
@@ -110,21 +110,6 @@
         </div>
         
     </div>
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-   
-
-
     <!-- Cập nhật các đường dẫn (Links) -->
     <div class="form-group mt-2">
         <label class="fw-bold">Images and Game</label>
@@ -181,7 +166,7 @@
 
     <div class="form-group">
         <label for="UserName">UserName</label>
-        <input type="text" class="form-control" asp-for="UserName" />
+        <input type="text" class="form-control" asp-for="UserName" disabled/>
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
 
