--- a/Project/Client/Views/Shared/_CommentReplies.cshtml
+++ b/Project/Client/Views/Shared/_CommentReplies.cshtml
@@ -19,30 +19,64 @@
             </div>
         </div>
 
+
         <div class="row">
             <!-- Nút "Xem thêm" -->
-            <div class=" col-6 text-start">
-                <a style="width:50%; text-decoration:none; color:black" id="toggleButton-@reply.Id" onclick="toggleReplies('@reply.Id')">Xem thêm | </a>
-                <!-- Nút "Reply" -->
-                <a style="width:50%; text-decoration:none; color:black" onclick="scrollToReplyForm('@reply.Id')">Reply</a>
+            <div class="col-md-6 text-start">
+                <a id="toggleButton-@reply.Id"
+                   class="link-action"
+                   onclick="toggleReplies('@reply.Id')"
+                   style="width:50%; text-decoration:none; color:black; padding:5px; border-radius:5px; transition: all 0.3s;">
+                    Xem thêm
+                </a>
+                |
+                <a class="link-action"
+                   onclick="scrollToReplyForm('@reply.Id')"
+                   style="width:50%; text-decoration:none; color:black; padding:5px; border-radius:5px; transition: all 0.3s;">
+                    Reply
+                </a>
             </div>
-            <div class="col-6 justify-content-end">
-                <div class="col-md-2 comment-footer text-end">
-                    <p class="likes">
-                        <small>
-                            @reply.NumberOfLikes <i class="fa-solid fa-thumbs-up"></i>
-                            @reply.NumberOfDisLikes <i class="fa-solid fa-thumbs-down"></i>
-                        </small>
-                    </p>
-                </div>
-            </div>         
+
+            <div class="col-md-6 comment-footer text-end">
+                <p class="likes">
+                    <small>
+                        <span id="like-count-@reply.Id">@reply.NumberOfLikes</span>
+
+                        <!-- Form for Increasing Like -->
+                        <form asp-action="IncreaseLike" asp-controller="Product" method="post" style="display:inline;" class="like-form">
+                            <!-- Hidden input to send the comment ID -->
+                            <input type="hidden" name="commentID" value="@reply.Id" />
+                            <!-- Hidden input to send the product ID -->
+                            @* <input type="hidden" name="productID" value="@product.Id" /> *@
+                            <button type="submit" class="like-button " style="background:none; border:none; cursor:pointer;">
+                                <i class="fa-solid fa-thumbs-up"></i>
+                            </button>
+                        </form>
+
+                        <span id="dislike-count-@reply.Id">@reply.NumberOfDisLikes</span>
+
+                        <!-- Form for Decreasing Like -->
+                        <form asp-action="DecreaseLike" asp-controller="Product" method="post" style="display:inline;" class="dislike-form">
+                            <!-- Hidden input to send the comment ID -->
+                            <input type="hidden" name="commentID" value="@reply.Id" />
+                            <!-- Hidden input to send the product ID -->
+                            @* <input type="hidden" name="productID" value="@product.Id" /> *@
+                            <button type="submit" class="dislike-button" style="background:none; border:none; cursor:pointer;">
+                                <i class="fa-solid fa-thumbs-down"></i>
+                            </button>
+                        </form>
+                    </small>
+
+
+                </p>
+            </div>
         </div>
 
         <!-- Phần chứa các bình luận con -->
         <div id="replies-@reply.Id" class="ms-5" style="display: none;"></div>
     </div>
 }
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     function toggleReplies(parentId) {
         var repliesContainer = $('#replies-' + parentId);
@@ -73,5 +107,4 @@
             }
         }
     }
-
 </script>
