--- a/Project/Client/Views/User/Cart.cshtml
+++ b/Project/Client/Views/User/Cart.cshtml
@@ -1,4 +1,14 @@
-﻿<style>
+﻿@using Client.Models.OrderModel
+@model CartModel
+
+
+
+
+
+
+
+
+<style>
     body {
         background-color: #eeecec;
     }
@@ -8,8 +18,8 @@
     }
 
     .payment-icon {
-        width: 24px; /* Kích thước của hình ảnh logo */
-        height: 24px; /* Kích thước của hình ảnh logo */
+        width: 35px; /* Kích thước của hình ảnh logo */
+        height: 35px; /* Kích thước của hình ảnh logo */
         object-fit: contain; /* Đảm bảo hình ảnh không bị méo mó */
     }
 
@@ -26,34 +36,36 @@
         <!-- Your Order Section -->
         <div class="col-lg-7">
             <h5 class="fw-bold text-success"><i class="fas fa-user"></i>YOUR ORDER</h5>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="custom-bg-light mt-3 shadow-sm border">
                 <div class="d-flex align-items-center">
-                    <img src="~/Image/history-game-1.jpg" alt="Resident Evil 2" class="p-2 me-3" style="width:100px; height100px;" />
+                    <img src="~/Image/avatar.jpeg" alt="Resident Evil 2" class="p-2 me-3" style="width:100px; height100px;" />
                     <div>
                         <p class="mb-0 fw-bold">Resident Evil 2</p>
-                        <a href="#" class="text-muted">Move to wishlist</a> |
+                       @*  <a href="#" class="text-muted">Move to wishlist</a> | *@
                         <a href="#" class="text-muted">Remove</a>
                     </div>
-                    <div class="ms-auto fw-bold p-3">$9.99</div>
+                    <div class="ms-auto fw-bold p-3">12 000 vnđ</div>
                 </div>
             </div>
 
             <div class="custom-bg-light p-3 shadow-sm">
                 <div class="d-flex justify-content-between">
                     <p class="mb-0 text-secondary">All prices include VAT if applicable.</p>
-                    <div class="fw-bold">ORDER TOTAL: $9.99</div>
+                    <div class="fw-bold">ORDER TOTAL: 12 000 vnđ</div>
                 </div>
             </div>
         </div>
         <!-- Your Payment & Gifting Details Section -->
         <div class="col-lg-5">
             <h5 class="fw-bold text-success"><i class="fas fa-user"></i>YOUR PAYMENT & GIFTING DETAILS</h5>
+            
             <div class="custom-bg-light p-3 mt-3 shadow-sm border">
                 <!-- Wallet Payment Method -->
-                <div class="form-check text-secondary">
+                <div class="form-check text-secondary  d-flex align-items-center">
                     <input type="radio" id="wallet" name="payment" class="form-check-input">
                     <label for="wallet" class="form-check-label d-flex align-items-center">
-                        <img src="~/image/wallet.jpg" class="payment-icon me-2" />
+                        <img src="~/image/wallet.jpg" class=" mx-3 payment-icon me-2" />
                         Use Wallet Funds (Balance $0.00)
                     </label>
                 </div>
@@ -63,7 +75,7 @@
                 <a href="#" class="text-muted">Purchase more Wallet funds & learn more</a>
             </div>
 
-            <div class="custom-bg-light p-3 mt-3 shadow-sm border">
+           @*  <div class="custom-bg-light p-3 mt-3 shadow-sm border">
                 <!-- Credit Card Payment Method -->
                 <div class="form-check text-secondary">
                     <input type="radio" id="credit" name="payment" class="form-check-input">
@@ -95,15 +107,25 @@
                         PAYPAL
                     </label>
                 </div>
-            </div>
+            </div> *@
 
-            <div class="custom-bg-light p-3 d-flex shadow-sm border">
-                <!-- Skrill Payment Method -->
-                <div class="form-check text-secondary">
-                    <input type="radio" id="skrill" name="payment" class="form-check-input">
-                    <label for="skrill" class="form-check-label d-flex align-items-center">
-                        <img src="~/image/skrill.jpg" alt="Skrill Logo" class="payment-icon me-2" />
-                        SKRILL
+            <div class="custom-bg-light p-3 shadow-sm border">
+                <!-- MoMo Payment Method -->
+                <div class="form-check text-secondary d-flex align-items-center">
+                    <input asp-for="@Model.PaymentMethod" value="Wallet" type="radio" id="momo" name="PaymentMethod" class="form-check-input">
+                    <label for="momo" class="form-check-label d-flex align-items-center">
+                        <img src="~/image/Logo-MoMo-Square.webp" alt="MoMo Logo" class="mx-3 payment-icon me-2 p" />
+                        MOMO
+                    </label>
+                </div>
+            </div>
+             <div class="custom-bg-light p-3 shadow-sm border">
+                <!-- Payos Payment Method -->
+                <div class="form-check text-secondary d-flex align-items-center">
+                    <input asp-for="@Model.PaymentMethod" value="CreditCard" type="radio" id="payos" name="PaymentMethod" class="form-check-input">
+                    <label for="payos" class="form-check-label d-flex align-items-center">
+                        <img src="~/image/icon-payos.png" alt="payos Logo" class="mx-3 payment-icon me-2" />
+                        PAY OS
                     </label>
                 </div>
             </div>
@@ -119,10 +141,11 @@
             <div class="custom-bg-light p-3 mt-3 shadow-sm border">
                 <!-- Total and Google Pay Button -->
                 <div class="d-flex align-items-center justify-content-between">
-                    <h4>$9.99</h4>
-                    <button class="btn btn-dark px-3 py-2 rounded-3" style="width: 200px;">
-                        <img src="~/image/gpay-removebg-preview.png" alt="Google Pay Logo" class="me-2" style="width: 50px; height:40px" />
-                    </button>
+                    <h4>12 000 vnđ</h4>
+                    <a class="btn btn-dark px-3 py-2 rounded-3" style="width: 200px;">
+                 @*        <img src="~/image/gpay-removebg-preview.png" alt="MoMo Logo" class="me-2" style="width: 50px; height:50px" /> *@
+                 Pay
+                    </a>
                 </div>
             </div>
         </div>
@@ -130,3 +153,8 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
