--- a/Project/Client/Views/Admin/CommentManager.cshtml
+++ b/Project/Client/Views/Admin/CommentManager.cshtml
@@ -70,9 +70,9 @@
             </form>
 
             <div class="w-100">
-                <div class="text-end">
+                @* <div class="text-end">
                     <button class="btn btn-success" data-toggle="modal" data-target="#modalComment">+ Add</button>
-                </div>
+                </div> *@
             </div>
         </div>
 
@@ -115,10 +115,10 @@
                         <td>@comment.CreatedAt</td>
                         <td>@comment.NumberOfDisLikes</td>
                         @*Đây là nút Update*@
-                        <td>
+@*                         <td>
                             <a asp-action="UpdateComment" asp-route-Id="@comment.Id" class="text-danger mx-2"><span><i class="fa-regular fa-pen-to-square"></i></span></a>
 
-                        </td>
+                        </td> *@
 
                         <td>
 
