--- a/Project/Client/Views/Admin/UpdateProduct.cshtml
+++ b/Project/Client/Views/Admin/UpdateProduct.cshtml
@@ -166,7 +166,7 @@
 
     <div class="form-group">
         <label for="UserName">UserName</label>
-        <input type="text" class="form-control" asp-for="UserName" disabled/>
+        <input type="text" class="form-control" asp-for="UserName"/>
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
 
