--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -263,8 +263,9 @@
             @foreach (var product in Model.Product)
             {
                 <tr>
+                    <!-- QR Code Column -->
                     <td class="text-center">
-                        <img src="@product.QrCode" alt="QR Code" width="100" height="100" />
+                        <img src="@product.QrCode" alt="QR Code" width="100" height="100" class="qr-thumbnail" data-bs-toggle="modal" data-bs-target="#qrModal" data-qr="@product.QrCode" style="cursor:pointer;" />
                     </td>
                     <td class="text-center">@product.Name</td>
                     <td class="text-center">@product.Price.ToString("C")</td>
@@ -334,6 +335,20 @@
         </tbody>
     </table>
 
+    <!-- Modal for QR Code: Nhấn vào QRcode thì lấy hình ảnh phóng to đó -->
+    <div class="modal fade" id="qrModal" tabindex="-1" aria-labelledby="qrModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header" style="border:none; padding-bottom:0;">
+                    <!-- Giữ lại chỉ nút đóng -->
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center">
+                    <img id="qrModalImage" src="" alt="QR Code" style="width: 100%; height: auto;" />
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Phân trang -->
@@ -606,5 +621,16 @@
         });
     </script>
 
+    <script>
+        $(document).ready(function () {
+            // Event listener for QR code thumbnail click
+            $('.qr-thumbnail').on('click', function () {
+                var qrCodeUrl = $(this).data('qr');
+                $('#qrModalImage').attr('src', qrCodeUrl); // Set image URL for modal
+            });
+        });
+    </script>
+
 }
+
 
